unpackaged/main/default/objects/ffirule__IntegrationRuleLogLineItem__c/ffirule__IntegrationRuleLogLineItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationruleloglineitem</customHelpPage>
    <label>ClickLink Log Line Item</label>
    <nameField>
        <displayFormat>SOLOGLINE-{00000000}</displayFormat>
        <label>Log Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Log Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>