unpackaged/main/default/objects/ffirule__IntegrationRuleLogLineItem__c/fields/ffirule__IntegrationRuleLog__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRuleLog__c</fullName>
    <label>ClickLink Log</label>
    <referenceTo>ffirule__IntegrationRuleLog__c</referenceTo>
    <relationshipLabel>ClickLink Log Line Items</relationshipLabel>
    <relationshipName>IntegrationRuleLogLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>