unpackaged/main/default/objects/ffirule__IntegrationRuleLogLineItem__c/fields/ffirule__RelatedSourceLineItemTest__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RelatedSourceLineItemTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Source Line Item Test</label>
    <referenceTo>ffirule__IntegrationRuleSourceLineItemTest__c</referenceTo>
    <relationshipLabel>Create Target Line Log</relationshipLabel>
    <relationshipName>IntegrationRuleLogLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>